Generate the design canvas's tokens from HideTheme and fail on drift
The design canvas and the shell both carry the same token values, and a value
restated in two places is how they drift. HideTheme.swift owns a token; the
canvas is a consumer of it, the same way a Swift view is, so the canvas's mapped
variables are now generated from the Swift rather than maintained beside it.

- scripts/pen-tokens.mjs parses HideTheme.swift, including derived values whose
  expression is arithmetic over other constants, and answers what each mapped
  variable should be.
- scripts/pen-token-map.json records which constant each canvas variable carries,
  and why each remaining constant stays out.
- scripts/gen-pen-tokens.mjs writes those values into design/hide.pen, leaving
  every node and every design-authored variable untouched.
- scripts/check-pen-tokens.mjs refuses a canvas that disagrees, and refuses a
  HideTheme constant claimed by neither list: a token can otherwise reach the
  shell and never reach the design, and nothing would say so.

The check runs inside check-design-contract.mjs, so it rides the existing gate
and CI. The design-controls test fixture carries its own miniature theme, map and
canvas, and asserts both failure modes.

Design work now goes to design/hide.pen rather than a hosted canvas, so a design
change shows up in git diff beside the code change that answers it. The HTML
converter that existed only for the hosted tool's inline-style importer is
removed with it.